fix bug for safari. set vertical align for cell.

--- a/src/styles/cgrid.scss
+++ b/src/styles/cgrid.scss
@@ -33,6 +33,7 @@
                 overflow: hidden;
                 white-space: nowrap;
                 text-overflow: ellipsis;
+                vertical-align: middle;
             }
         }
     
